// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Card Props 1`] = `
<a
  className="card text_alignment_left theme_with_button"
  href="http://twitter.com"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="imgix_image card_image"
  >
    <img
      alt="Placeholder image"
      height={500}
      sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
      src="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
      srcSet="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
      width={900}
    />
  </div>
  <div
    className="card_content"
  >
    <h3>
      Utilize B2B networks
    </h3>
    <p>
      Est proident adipisicing reprehenderit in occaecat non. Aute enim minim labore nisi ullamco enim sint Lorem excepteur exercitation anim tempor ad minim ut. Sunt enim aliqua elit occaecat.
    </p>
    <button
      className="button theme_default"
    >
      Et excepteur et est et velit est magna id ad id.
    </button>
  </div>
</a>
`;

exports[`Storyshots Components/Card Theme Default 1`] = `
<a
  className="card text_alignment_left theme_default"
  href="http://twitter.com"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="imgix_image card_image"
  >
    <img
      alt="Placeholder image"
      height={500}
      sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
      src="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
      srcSet="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
      width={900}
    />
  </div>
  <div
    className="card_content"
  >
    <h3>
      Utilize B2B networks
    </h3>
    <p>
      Est proident adipisicing reprehenderit in occaecat non. Aute enim minim labore nisi ullamco enim sint Lorem excepteur exercitation anim tempor ad minim ut. Sunt enim aliqua elit occaecat.
    </p>
  </div>
</a>
`;

exports[`Storyshots Components/Card Theme With Button 1`] = `
<a
  className="card text_alignment_left theme_with_button"
  href="http://twitter.com"
  rel="noreferrer"
  target="_blank"
>
  <div
    className="imgix_image card_image"
  >
    <img
      alt="Placeholder image"
      height={500}
      sizes="320, 400, 480, 600, 720, 840, 960, 1040, 1140, 1280, 1440, 1600, 1920, 2560, 3360"
      src="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?w=900&h=500&fit=crop&ixlib=react-9.5.1-beta.1&auto=format"
      srcSet="https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=1&q=75 1x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=2&q=50 2x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=3&q=35 3x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=4&q=23 4x,
https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f?fit=crop&ixlib=react-9.5.1-beta.1&auto=format&w=900&h=500&dpr=5&q=20 5x"
      width={900}
    />
  </div>
  <div
    className="card_content"
  >
    <h3>
      Utilize B2B networks
    </h3>
    <p>
      Est proident adipisicing reprehenderit in occaecat non. Aute enim minim labore nisi ullamco enim sint Lorem excepteur exercitation anim tempor ad minim ut. Sunt enim aliqua elit occaecat.
    </p>
    <button
      className="button theme_default"
    >
      Et excepteur et est et velit est magna id ad id.
    </button>
  </div>
</a>
`;
